--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -33,12 +33,12 @@
 .main-container{
     max-width: 900px;
     margin: auto;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
 }
 
 .main .greet{
-    margin: 40px 0px;
-    font-size: 56px;
+    margin:  -8px 0px;
+    font-size: 50px;
     color: rgb(156, 156, 238);
     font-weight: 500;
     padding: 20px;
@@ -52,13 +52,13 @@
 
 .main .cards{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
     gap: 15px;
     padding: 20px;
 }
 
 .main .card{
-    height: 200px;
+    height: 180px;
     padding: 15px;
     border-radius: 10px;
     background-color: #f0f0f0;
@@ -87,7 +87,7 @@
 
 .main-bottom{
    position: absolute;
-   bottom: -10px;
+   bottom: 0;
    width: 100%;
    max-width: 900px;
    padding: 0px 20px;
