--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -43,6 +43,23 @@
     margin-bottom: 20px;
 }
 
+.prompt-text {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+.delete-button {
+    margin-left: 5px;
+    cursor: pointer;
+    border: 2px solid red;
+    border-radius: 50%;
+    padding: 2px;
+    object-fit: cover;
+    object-position: center;
+  }
+  
+
 .sidebar .recent-entry{
     display: flex;
     align-items: start;
@@ -52,6 +69,7 @@
     border-radius: 50px;
     color: #282828;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .sidebar .recent-entry:hover{
