--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -16,9 +16,10 @@
 
 .main .nav p{
     font-size: 28px;
-    background: linear-gradient(to right, #222528, #dab443);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background: linear-gradient(to right, hsl(10, 90%, 56%), #dab443);
+    background-clip: text;
+    color: transparent;
+    
 }
 
 .main .nav img{
@@ -45,9 +46,9 @@
 }
 
 .main .greet span{
-    background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background: linear-gradient(16deg, #4b90ff, #ff5546);
+    background-clip: text;
+    color: transparent;
 }
 
 .main .cards{
