--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -198,7 +198,7 @@
 @media (max-width:600px) {
     .main-bottom input{
         flex: none;
-        width: 150px;
+        width: 180px;
     }
     .main-bottom img{
         width: 20px;
@@ -208,5 +208,8 @@
     }
     .search-box div{
         gap: 5px;
+    }
+    .cards{
+        visibility: hidden;
     }
 }
